@@ -58,6 +58,7 @@ CHANGELOG Roundcube Webmail
 - Fix bug where assets_path wasn't added to some watermark frames
 - Fix so untagged COPYUID responses are also supported according to RFC6851 (#5982)
 - Fix issue caused by non-default session.cookie_lifetime setting (#5961)
+- Fix Edge encoding bug when pasting text into the HTML editor, update to TinyMCE 4.5.8 (#5885)
 
 RELEASE 1.3.1
 -------------
